Bugfix/kitosudv 5441 nested dialog title not centered (#253)
* change app dialog header back to it's working structure

* commented out offending css rules

* remove css rules causing nested dialog title to not be centered

--- a/src/app/shared/components/dialogs/dialog/dialog-header/dialog-header.component.scss
+++ b/src/app/shared/components/dialogs/dialog/dialog-header/dialog-header.component.scss
@@ -37,12 +37,10 @@
 }
 
 .title-align-bottom {
-  display: flex;
   align-items: center;
 }
 
 .title-container {
-  display: flex;
   align-items: center;
   gap: 8px;
 }
